--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -364,6 +364,7 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
+deny 2a06:1700:1:109::209:a94;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -383,22 +384,6 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-deny 2a0b:f4c0:16c:10::1;
-deny 2a0b:f4c0:16c:1::1;
-deny 2a0b:f4c0:16c:11::1;
-deny 2a0b:f4c0:16c:12::1;
-deny 2a0b:f4c0:16c:13::1;
-deny 2a0b:f4c0:16c:14::1;
-deny 2a0b:f4c0:16c:15::1;
-deny 2a0b:f4c0:16c:16::1;
-deny 2a0b:f4c0:16c:2::1;
-deny 2a0b:f4c0:16c:3::1;
-deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
-deny 2a0b:f4c0:16c:6::1;
-deny 2a0b:f4c0:16c:7::1;
-deny 2a0b:f4c0:16c:8::1;
-deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::132;
@@ -565,7 +550,6 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
-deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
@@ -573,7 +557,6 @@ deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
-deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
@@ -597,7 +580,6 @@ deny 2a12:a800:11:1:124:198:131:62;
 deny 2a12:a800:11:1:124:198:132:13;
 deny 2a12:a800:11:1:124:198:132:172;
 deny 2a12:a800:11:1:124:198:132:237;
-deny 2a12:a800:11:1:124:198:132:52;
 deny 2a12:a800:11:1:192:159:99:168;
 deny 2a12:a800:11:1:192:159:99:74;
 deny 2a12:a800:1:1:194:26:192:77;
@@ -634,7 +616,6 @@ deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
 deny 2a12:a800:2:1:45:141:215:19;
 deny 2a12:a800:2:1:45:141:215:200;
-deny 2a12:a800:2:1:45:141:215:21;
 deny 2a12:a800:2:1:45:141:215:28;
 deny 2a12:a800:2:1:45:141:215:40;
 deny 2a12:a800:2:1:45:141:215:56;
