--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -418,6 +418,7 @@ set_real_ip_from 185.235.146.29;
 set_real_ip_from 185.240.242.135;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
+set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.54;
@@ -819,9 +820,10 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.7;
@@ -1015,7 +1017,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1265,7 +1266,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
-set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
@@ -1314,6 +1314,7 @@ set_real_ip_from 2a12:a800:1:1:2:58:56:93;
 set_real_ip_from 2a12:a800:1:1:45:154:98:33;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:185;
+set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
 set_real_ip_from 2a12:a800:2:1:185:241:208:206;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
@@ -1326,6 +1327,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:164;
 set_real_ip_from 2a12:a800:2:1:45:138:16:222;
 set_real_ip_from 2a12:a800:2:1:45:138:16:230;
 set_real_ip_from 2a12:a800:2:1:45:138:16:231;
+set_real_ip_from 2a12:a800:2:1:45:138:16:239;
 set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
@@ -1405,7 +1407,6 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
-set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
@@ -1417,6 +1418,7 @@ set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
 set_real_ip_from 45.138.16.231;
+set_real_ip_from 45.138.16.239;
 set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
@@ -1616,7 +1618,6 @@ set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
-set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
