--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -89,6 +89,7 @@ set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
+set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
 set_real_ip_from 107.189.7.144;
 set_real_ip_from 107.189.7.168;
@@ -342,7 +343,6 @@ set_real_ip_from 185.220.101.154;
 set_real_ip_from 185.220.101.155;
 set_real_ip_from 185.220.101.156;
 set_real_ip_from 185.220.101.157;
-set_real_ip_from 185.220.101.158;
 set_real_ip_from 185.220.101.160;
 set_real_ip_from 185.220.101.162;
 set_real_ip_from 185.220.101.163;
@@ -418,8 +418,8 @@ set_real_ip_from 185.235.146.29;
 set_real_ip_from 185.240.242.135;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
-set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
+set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
@@ -748,6 +748,7 @@ set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
+set_real_ip_from 212.192.23.129;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
@@ -811,7 +812,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -819,8 +819,10 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
 set_real_ip_from 23.191.200.6;
@@ -941,6 +943,7 @@ set_real_ip_from 2605:a141:2261:4410::1;
 set_real_ip_from 2605:a142:2263:1906::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2605:e440:3::3ef;
+set_real_ip_from 2605:e440:38::21a;
 set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::4894;
@@ -1077,6 +1080,7 @@ set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
+set_real_ip_from 2a05:6e02:1108:cc10:9970:36ce:47a6:804c;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -1133,7 +1137,6 @@ set_real_ip_from 2a0b:f4c2:1::154;
 set_real_ip_from 2a0b:f4c2:1::155;
 set_real_ip_from 2a0b:f4c2:1::156;
 set_real_ip_from 2a0b:f4c2:1::157;
-set_real_ip_from 2a0b:f4c2:1::158;
 set_real_ip_from 2a0b:f4c2:1::160;
 set_real_ip_from 2a0b:f4c2:1::162;
 set_real_ip_from 2a0b:f4c2:1::163;
@@ -1263,7 +1266,6 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
-set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
@@ -1272,6 +1274,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1311,8 +1314,8 @@ set_real_ip_from 2a12:a800:1:1:2:58:56:93;
 set_real_ip_from 2a12:a800:1:1:45:154:98:33;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:185;
-set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
+set_real_ip_from 2a12:a800:2:1:185:241:208:206;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:185:241:208:82;
@@ -1404,7 +1407,6 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
-set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
@@ -1615,6 +1617,7 @@ set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
+set_real_ip_from 82.96.141.198;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
@@ -1676,6 +1679,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
 set_real_ip_from 93.88.75.35;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
